# doctainr

./: .deepsource.toml  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  devenv.nix
.github/: mergify.yml  renovate.json
.github/workflows/: ci-doctor.lock.yml  ci.yaml  daily-perf-improver.lock.yml  daily-progress.lock.yml  daily-progress.md  daily-repo-status.lock.yml  daily-test-improver.lock.yml  pr-fix.lock.yml  update-docs.lock.yml
assets/styling/: main.css
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  GETTING_STARTED.md  QUICKSTART.md  README.md  STYLE_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md  contributing.md
docs/api/: README.md  app-state.md  components.md  docker-service.md  services.md  state.md  views.md
docs/architecture/: dioxus-patterns.md  docker-integration.md  overview.md  routing.md
docs/deployment/: building.md
docs/explanation/: technology-choices.md
docs/guides/: contributing.md  deployment.md  state-management.md  troubleshooting.md
docs/how-to/: build-from-source.md  manage-containers.md
docs/reference/: api.md  architecture.md  components.md  state-management.md
docs/tutorials/: getting-started.md
src/: main.rs
src/components/: metric_card.rs  mod.rs  section_header.rs  status_pill.rs
src/services/: docker.rs  mod.rs
src/utils/: app_state.rs  mod.rs
src/views/: containers.rs  dashboard.rs  images.rs  mod.rs  settings.rs  shell.rs  volumes.rs
